@@ -1,4 +1,6 @@
 <div id="portal-searchfacets"
+     tal:define="facets view/facets; selected view/selected"
+     tal:condition="python: facets or selected"
      i18n:domain="plone">
 
   <h4 i18n:translate="heading_search_facets">
@@ -6,7 +8,7 @@
   </h4>
 
   <div i18n:domain="solr" id="selected-facets">
-    <div tal:repeat="item view/selected">
+    <div tal:repeat="item selected">
       &raquo;
       <span tal:content="item/value" i18n:translate=""
             tal:attributes="title item/title" i18n:attributes="title" />
@@ -17,7 +19,7 @@
     </div>
   </div>
 
-  <div tal:repeat="facet view/facets" i18n:domain="solr">
+  <div tal:repeat="facet facets" i18n:domain="solr">
     <h5 tal:content="facet/title" i18n:translate="" />
     <dl>
       <tal:counts repeat="item facet/counts">
